force-app/main/default/objects/et4ae5__Campaign_Member_Configuration__c/et4ae5__Campaign_Member_Configuration__c.object-meta.xml
<CustomObject>
    <description>Contains the fields used to determine the configuration for Campaign Member tracking and updates.</description>
    <label>Campaign Member Configuration</label>
    <nameField>
        <label>Campaign Member Configuration Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Campaign Member Configurations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>