force-app/main/default/objects/et4ae5__Campaign_Member_Configuration__c/fields/et4ae5__CampaignMemberIntegrationEnabled__c.field-meta.xml
<CustomField>
    <fullName>et4ae5__CampaignMemberIntegrationEnabled__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If this box is checked, Campaign Member Status or Activity Field will be updated depending on the value of  the UpdateStatusOrActivity field.</description>
    <inlineHelpText>If this box is checked, Campaign Member Status or Activity Field will be updated depending on the value of  the UpdateStatusOrActivity field.</inlineHelpText>
    <label>CampaignMemberConnectorEnabled</label>
    <type>Checkbox</type>
</CustomField>