force-app/main/default/objects/et4ae5__Campaign_Member_Configuration__c/fields/et4ae5__mapClickedTo__c.field-meta.xml
<CustomField>
    <fullName>et4ae5__mapClickedTo__c</fullName>
    <description>This is the value that will appear in status or activity when a clicked event occurs.</description>
    <label>mapClickedTo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>