force-app/main/default/objects/et4ae5__Campaign_Member_Configuration__c/fields/et4ae5__mapSoftBounceTo__c.field-meta.xml
<CustomField>
    <fullName>et4ae5__mapSoftBounceTo__c</fullName>
    <label>mapSoftBounceTo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>