force-app/main/default/objects/et4ae5__Campaign_Member_Configuration__c/fields/et4ae5__UpdateStatusOrActivity__c.field-meta.xml
<CustomField>
    <fullName>et4ae5__UpdateStatusOrActivity__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Determines if Campaign Member&apos;s Activity field (box is not checked) or the Status field (box is checked) will be updated if the Campaign Member is enabled.</description>
    <label>UpdateStatusOrActivity</label>
    <type>Checkbox</type>
</CustomField>